[package]
name = "orderwal"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/al8n/orderwal"
homepage = "https://github.com/al8n/orderwal"
documentation = "https://docs.rs/orderwal"
description = "A generic-purpose, atomic, ordered, zero-copy, Write-Ahead Log implementation for Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.80"
categories = ["filesystem", "database-implementations", "development-tools", "data-structures"]
keywords = ["wal", "write-ahead-log", "append-only", "append-only-log", "bitcask"]

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
std = ["rarena-allocator/default", "crossbeam-skiplist/default", "bitflags/default", "dbutils/default", "among/default", "faststr?/default", "bytes?/default", "smol_str?/default"]

xxhash3 = ["dbutils/xxhash3", "std"]
xxhash64 = ["dbutils/xxhash64", "std"]

[dependencies]
among = { version = "0.1", default-features = false, features = ["either"] }
bitflags = { version = "1", default-features = false }
dbutils = { version = "0.3", default-features = false, features = ["crc32fast"] }
rarena-allocator = { version = "0.2", default-features = false, features = ["memmap"] }
crossbeam-skiplist = { version = "0.1", default-features = false, package = "crossbeam-skiplist-pr1132" }
paste = "1"
thiserror = "1"

bytes = { version = "1", default-features = false, optional = true }
smallvec = { version = "1", default-features = false, optional = true, features = ["const_generics"] }
smallvec-wrapper = { version = "0.1", optional = true, default-features = false, features = ["const_generics"] }
smol_str = { version = "0.3", default-features = false, optional = true }
faststr = { version = "0.2", default-features = false, optional = true }

tracing = { version = "0.1", optional = true }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
criterion = "0.5"
names = "0.14"
rand = "0.8"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(test_unsync_constructor)',
  'cfg(test_unsync_insert)',
  'cfg(test_unsync_iters)',
  'cfg(test_unsync_get)',
  'cfg(test_swmr_constructor)',
  'cfg(test_swmr_insert)',
  'cfg(test_swmr_iters)',
  'cfg(test_swmr_get)',
  'cfg(test_swmr_generic_constructor)',
  'cfg(test_swmr_generic_insert)',
  'cfg(test_swmr_generic_iters)',
  'cfg(test_swmr_generic_get)',
] }
